tests/inter/fail/illegal-036.dcf
void main(){
    const int i = 0;
    // Constant fields cannot be assigned to
    i = 5;
}